Added css styling

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uglyHTML</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Tangerine" />
+    <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 </head>
 
 <body>
 
     <div class="top">
-        <header>
+        <header id = "title">
             Generic Watches Site
         </header>
-        <h3>
+        <h3 class = "Catch-Phrase">
             Your one stop website for all things "watch"
         </h3>
-        <h3>
+        <h3 class = "Catch-Phrase">
             It's about time...
         </h3>
         <img src="assets/manyWatches.png" alt="Many Watches">
